--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <div class="text-center" id="result">
         <p id="output"></p>
-        <img id="bowl" style="display:none;" src="icons/mixingbowl.png">
+        <img id="bowl" style="display:none;" src="/icons/mixingbowl.png">
         <p id="dish"></p>
-        <img id="fail" style="display:none;" src="icons/fail.png">
-        <img id="cake" style="display:none;" src="icons/cake.png">
-        <img id="cookie" style="display:none;" src="icons/cookie.png">
-        <img id="bread" style="display:none;" src="icons/bread.png">
+        <img id="fail" style="display:none;" src="/icons/fail.png">
+        <img id="cake" style="display:none;" src="/icons/cake.png">
+        <img id="cookie" style="display:none;" src="/icons/cookie.png">
+        <img id="bread" style="display:none;" src="/icons/bread.png">
 
     </div>
 
