change folder to assets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Baking Simulator</title>
     <meta name="description" content="Anna Malecki and Alana Pendleton LMC6313 Lab 2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="icons/logo_small.png" />
+    <link rel="icon" type="image/png" href="assets/logo_small.png" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -33,12 +33,12 @@
 
     <div class="text-center" id="result">
         <p id="output"></p>
-        <img id="bowl" style="display:none;" src="/icons/mixingbowl.png">
+        <img id="bowl" style="display:none;" src="../assets/mixingbowl.png">
         <p id="dish"></p>
-        <img id="fail" style="display:none;" src="/icons/fail.png">
-        <img id="cake" style="display:none;" src="/icons/cake.png">
-        <img id="cookie" style="display:none;" src="/icons/cookie.png">
-        <img id="bread" style="display:none;" src="/icons/bread.png">
+        <img id="fail" style="display:none;" src="../assets/fail.png">
+        <img id="cake" style="display:none;" src="../assets/cake.png">
+        <img id="cookie" style="display:none;" src="../assets/cookie.png">
+        <img id="bread" style="display:none;" src="../assets/bread.png">
 
     </div>
 
