--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <div class="text-center" id="result">
         <p id="output"></p>
         <img id="bowl" style="display:none;" src="mixingbowl.png">
+        <img class="gif" id="bowlAdded" style="display:none;" src="mix.gif">
+        
         <p id="dish"></p>
         <img id="fail" style="display:none;" src="fail.png">
         <img id="cake" style="display:none;" src="cake.png">
