--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
     <div class="text-center" id="bakingArea">
         <h2 id="ingredient">Ingredient</h2>
-        <button class="btn btn-secondary" id="bttn1">Option 1</button>
-        <button class="btn btn-secondary" id="bttn2">Option 2</button>
-        <button class="btn btn-secondary" id="bttn3">Option 3</button>
+        <button class="btn-secondary" id="bttn1">Option 1</button>
+        <button class="btn-secondary" id="bttn2">Option 2</button>
+        <button class="btn-secondary" id="bttn3">Option 3</button>
     </div>
 
     <div class="text-center" id="result">
