--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>Baking Simulator</h1>
+    <h1>Bake the World a Better Place</h1>
 
     <div class="text-center" id="start">
         <button class="btn btn-secondary" id="bttn">Begin Baking</button>
