hide images after starting

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <body>
     <h1>Bake the World a Better Place</h1>
     <div class="text-center" id="result">
-    <p>Try and bake these delicious items!</p>
   </div>
     
-  <div class="text-center">
+  <div id="starterImages" class="text-center">
+      <p>Try and bake these delicious items!</p>
       <img src="bread.png" class="ld ld-bounce" style="animation-duration:1s" alt="Bread">
     
       <img src="cake.png" class="ld ld-bounce xhalf" style="animation-duration:2s" alt="Cake">
