--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Bake the World a Better Place</h1>
 
     <div id="starterImages" class="text-center">
-        <p>Try and bake these delicious items!</p>
+        <p>See if you have what it takes to bake a cookie,<br> some bread or a piece of cake!<br><Br>Click "Begin Baking" below to get started.</p>
         <img src="bread.png" id="bounceBread" class="ld ld-bounce starterImage" style="animation-duration:1s" alt="Bread">
 
         <img src="cake.png" id="bounceCake" class="ld ld-bounce starterImage" style="animation-duration:2s" alt="Cake">
@@ -62,7 +62,7 @@
     </div>
 
     <div class="text-center" id="replay">
-        <button class="btn btn-secondary" id="bttn-replay">Play Again</button>
+        <button class="btn btn-secondary" id="bttn-replay">Bake Again</button>
     </div>
 
 </body>
