added score keeping functionality

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
     <h1>Bake the World a Better Place</h1>
 
     <div id="starterImages" class="text-center">
-        <p>See if you have what it takes to bake a cookie,<br> some bread or a piece of cake!<br><Br>Click "Begin Baking" below to get started.</p>
-        <img src="bread.png" id="bounceBread" class="ld ld-bounce starterImage" style="animation-duration:1s" alt="Bread">
+        <p id="instructions">See if you have what it takes to bake the items below!</p>
+        <h3 id="score">Recipes Completed: 0</h3>
+        <img src="bread-line.png" id="bounceBread" class="ld ld-bounce starterImage" style="animation-duration:1s" alt="Bread">
 
-        <img src="cake.png" id="bounceCake" class="ld ld-bounce starterImage" style="animation-duration:2s" alt="Cake">
+        <img src="cake-line.png" id="bounceCake" class="ld ld-bounce starterImage" style="animation-duration:2s" alt="Cake">
 
-        <img src="cookie.png" id="bounceCookie" class="ld ld-bounce starterImage" style="animation-duration:1.5s" alt="Cookie">
+        <img src="cookie-line.png" id="bounceCookie" class="ld ld-bounce starterImage" style="animation-duration:1.5s" alt="Cookie">
     </div>
 
     <div class="text-center" id="start">
