Header/Help Button Fix

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <body>
     <!-- Button trigger modal -->
-    <div>
+    <div><br>
         <button type="button" class="hintButton" data-toggle="modal" data-target="#helpModal">Help</button>
-    </div>
+    </div><br>
 
     <div>
         <h1>Bake the World a Better Place</h1>
