added pie recipe

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h1>Bake the World a Better Place</h1>
     </div>
 
+    <!-- Bounding Images   -->
     <div id="starterImages" class="text-center">
         <p id="instructions">See if you have what it takes to bake the items below!</p>
         <h3 id="score">Recipes Completed: 0</h3>
@@ -40,6 +41,8 @@
         <img src="cake-line.png" id="bounceCake" class="ld ld-bounce starterImage" style="animation-duration:2s" alt="Cake">
 
         <img src="cookie-line.png" id="bounceCookie" class="ld ld-bounce starterImage" style="animation-duration:1.5s" alt="Cookie">
+        
+        <img src="pie-line.png" id="bouncePie" class="ld ld-bounce starterImage" style="animation-duration:1.5s" alt="Pie">
     </div>
 
     <div class="text-center" id="start">
@@ -51,6 +54,7 @@
         <button class="btn-secondary" style="animation-duration:0.5s" id="bttn1">Option 1</button>
         <button class="btn-secondary ld-slide-ttb" id="bttn2">Option 2</button>
         <button class="btn-secondary ld-slide-ttb" id="bttn3">Option 3</button>
+        <button class="btn-secondary ld-slide-ttb" id="bttn4">Option 4</button>
     </div>
 
     <div class="text-center" id="result">
@@ -66,6 +70,7 @@
         <img id="cake" style="display:none;" src="cake.png" alt="Cake">
         <img id="cookie" style="display:none;" src="cookie.png" alt="Cookie">
         <img id="bread" style="display:none;" src="bread.png" alt="Bread">
+        <img id="pie" style="display:none;" src="pie.png" alt="Pie">
     </div>
 
     <div class="text-center" id="replay">
