added help scenarios

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <!--Shows Results of Baking-->
         <p id="dish"></p>
         <p id="pun"></p>
+        <p id="helpText"></p>
 
         <img id="fail" style="display:none;" src="fail.png" alt="Fail">
         <img id="cake" style="display:none;" src="cake.png" alt="Cake">
