added play again button

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
     <div class="text-center" id="replay">
         <button class="btn btn-secondary" id="bttn-replay">Bake Again</button>
     </div>
+    
+    <div class="text-center" id="gameOver">
+        <button type="button" class="btn btn-secondary" onClick="window.location.reload();">Play Again</button>
+    </div>
 
     <!-- Modal -->
     <div class="modal" id="helpModal" tabindex="-1" role="dialog" aria-hidden="true">
