--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Baking Simulator</title>
+    <title>Pun in the Oven</title>
     <meta name="description" content="Anna Malecki and Alana Pendleton LMC6313 Lab 2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="logo_small.png" />
